# PasswordSystem

./: .gitignore  README.md  pyproject.toml  run.sh
app/: requirements.txt
src/app/: main.py
src/app/models/: core.py  database.py
